# iwd-tui

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: release.yml
docs/: design.md
src/: main.rs  tests.rs
src/snapshots/: iwd_tui__tests__snapshot_error.snap  iwd_tui__tests__snapshot_ethernet.snap  iwd_tui__tests__snapshot_forget_overlay.snap  iwd_tui__tests__snapshot_narrow_connected.snap  iwd_tui__tests__snapshot_password_overlay.snap  iwd_tui__tests__snapshot_scanning.snap  iwd_tui__tests__snapshot_wide_connected.snap  iwd_tui__tests__snapshot_wide_disconnected.snap
