[package]
name = "iwd-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
crossterm = "0.28"
dbus = "0.9"
dbus-crossroads = "0.5"
libc = "0.2"
ratatui = "0.29"

[dev-dependencies]
insta = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
